<resources>
    <string name="app_name">Hide My Message</string>
    <string name="input">Input:</string>
    <string name="hide_my_message">Hide My Message</string>
    <string name="output">Output:</string>
    <string name="key">Key:</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="decrypt">DECRYPT</string>
    <string name="copy_output_to_clipboard">COPY OUTPUT TO CLIPBOARD</string>
</resources>