<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".HMMMainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/hide_my_message"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="77dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/input"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/output"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEncrypt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/key"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#222222"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#F3F3F3"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextOutput"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="#222222"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#F3F3F3"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextKey"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:background="#2B2B2B"
        android:ems="10"
        android:hint="Max 16 Characters"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#6E6E6E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/buttonEncrypt"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#222222"
        android:onClick="performEncrypt"
        android:text="@string/encrypt"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecrypt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

    <Button
        android:id="@+id/buttonDecrypt"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:background="#222222"
        android:onClick="performDecrypt"
        android:text="@string/decrypt"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEncrypt"
        app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

    <Button
        android:id="@+id/buttonCopyClipboard"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="#222222"
        android:onClick="clipboardCopy"
        android:text="@string/copy_output_to_clipboard"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOutput" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text="by Maurice Kasomwung"
        android:textAlignment="center"
        android:textColor="#323232"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCopyClipboard" />

</androidx.constraintlayout.widget.ConstraintLayout>